fixed squished sidebar

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,11 +1,16 @@
+#root{
+  width: 100vw;
+  height: 100vh;
+}
+
 body{
   margin: 0;
 }
 
 .container{
   box-sizing: border-box;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
