--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,13 +1,13 @@
 .sidebar{
   height: 100%;
-  width: 10px;
+  /* width: 10px; */
   flex:1;
   background-color: var(--primary-bg-color);
-  max-width: 400px;
+  max-width: 300px;
   color: white;
   font-family: var(--default-font);
   border: 1px solid white;
-  border-radius: 10px;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
