--- a/src/styles/WinrateBar.css
+++ b/src/styles/WinrateBar.css
@@ -1,21 +1,36 @@
-.container{
-  height: 30px;
+.bar{
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0px 10px;
+  height: 25px;
+  width: 100%;
   display: flex;
   flex-direction: row;
 }
 
-.container div{
+.bar div{
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0px 10px;
 }
 
 .blackBar{
   background-color: #3C3C3C;
+  color: white;
+  justify-content: right;
 }
 
 .drawBar{
   background-color: #6B6B6B;
+  color: white;
+  justify-content: center;
 }
 
 .whiteBar{
   background-color: #BCBCBC;
+  color: #3C3C3C;
+  justify-content: left;
 }
